@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree keyword_open="1">
+    <field name="product" expand="1"/>
     <field name="date"/>
     <field name="quantity" expand="2"/>
 </tree>
