@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="product" expand="1"/>
     <field name="date"/>
     <field name="move"/>
     <field name="origin" expand="1"/>
